Fix menu position on mobile

--- a/src/stylesheets/components/_menu.scss
+++ b/src/stylesheets/components/_menu.scss
@@ -1,18 +1,22 @@
 .main-menu {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0;
-  background-color: palette('blue');
-  margin: 0;
+  left: 0;
+
+  z-index: 100;
+
   width: 100%;
+  height: $menu-height;
+
   padding-top: 1em;
   padding-bottom: 0.5rem;
-  z-index: 100;
-  height: $menu-height;
-  transition-property: background-color, height;
+  margin: 0;
+
+  background-color: palette('blue');
+
   transition-duration: 0.3s, 1s;
+  transition-property: background-color, height;
 
   @media (min-width: breakpoint('tablet')) {
     .home__header & {
@@ -23,46 +27,57 @@
 
 .menu-container {
   position: relative;
+
+  height: $menu-height;
   max-width: $max-width;
+
   padding-right: $gutter;
   padding-left: $gutter;
   margin-right: auto;
   margin-left: auto;
-  height: $menu-height;
 }
 
 .main-menu.animate {
-  padding-top: 0;
   height: $menu-height-animate;
+
+  padding-top: 0;
+
   background-color: palette('blue');
 }
 
 .brand-wrap {
   position: absolute;
-  left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  left: 50%;
+
   max-width: 100%;
 
+  transform: translate(-50%, -50%);
+
   @media (min-width: breakpoint('tablet')) {
-    left: 0;
     top: 0;
+    left: 0;
+
     transform: translate(0, 0);
   }
 }
 
 .logo-psol {
   @include image-replacement;
+
   display: block;
+
   height: $leading * 2rem;
   min-width: 213px;
   min-height: 39px;
+
   background-image: url('../assets/images/icons/logo-psol.png');
+  background-position: 50% 50%;
   background-size: 186px 54px;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
-  transition-property: background-size;
+
   transition-duration: 0.8s;
+  transition-property: background-size;
 
   @media screen and (min-width: breakpoint('wide')) {
     background-size: 186px 54px;
@@ -78,62 +93,79 @@
 }
 
 .donate-nav a {
-  margin-left: auto;
-  margin-right: auto;
-  border: 2px solid palette('purple', 'light');
+  width: 5em;
+
   padding-top: $gutter * 0.2;
   padding-bottom: $gutter * 0.2;
-  width: 5em;
+  margin-right: auto;
+  margin-left: auto;
+
+  border: 2px solid palette('purple', 'light');
   border-radius: 10px;
 
   &:hover,
   &:link:focus,
   &:focus,
   &:active {
-    color: palette('blue', 'base');
-    background-color: palette('white');
-    border-color: palette('white');
     text-decoration: none;
-  }
 
+    color: palette('blue', 'base');
+
+    background-color: palette('white');
+
+    border-color: palette('white');
+  }
 }
 
 .menu-wrap {
-  opacity: 0;
   max-height: 0;
+
   overflow: hidden;
-  transition-property: max-height;
+
+  opacity: 0;
+
   transition-duration: 0.6s;
+  transition-property: max-height;
 
   &.show {
-    top: $menu-height;
-    margin: 0;
-    opacity: 9;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    max-height: 1000px;
     position: absolute;
-    padding-top: 1em;
-    padding-bottom: 1.5em;
-    max-height: auto;
+    top: $menu-height;
     right: 0;
     left: 0;
+
+    display: block;
+
+    width: 100%;
+    max-height: 1000px;
+    max-height: auto;
+
+    padding-top: 1em;
+    padding-bottom: 1.5em;
+    margin: 0;
+    margin-right: auto;
+    margin-left: auto;
+
     background-color: palette('blue');
+
+    opacity: 9;
   }
 
-
   @media screen and (min-width: breakpoint('tablet')) {
-    right: 0;
     position: absolute;
-    margin-top: 0.25em;
-    text-align: center;
-    opacity: 1;
-    overflow: hidden;
-    max-height: 100%;
-    transform: translateY(-50%);
     top: 50%;
+    right: 0;
+
+    max-height: 100%;
+
+    margin-top: 0.25em;
+
+    overflow: hidden;
+
+    text-align: center;
+
+    opacity: 1;
+    transform: translateY(-50%);
+
     transition-property: none;
   }
 }
@@ -143,14 +175,16 @@
 
   @media screen and (min-width: breakpoint('tablet')) {
     display: none;
+
     outline: none;
   }
 }
 
 .main-menu li {
   font-size: 1.09375rem;
-  transition-property: font-size;
+
   transition-duration: 0.6s;
+  transition-property: font-size;
 }
 
 .main-menu.animate li {
@@ -158,39 +192,45 @@
 }
 
 .menu-item {
-  margin: auto;
   padding-top: 0.25em;
   padding-bottom: 0.25em;
+  margin: auto;
 
   @media (min-width: breakpoint('tablet')) {
     @include inline-block-item($align: 'top', $font-size:  1rem);
-    vertical-align: middle;
+
     padding-right: 1em;
     padding-left: 1em;
+
+    vertical-align: middle;
   }
 }
 
 button.mobile-button {
   position: absolute;
-  cursor: pointer;
-  transform: translateY(-50%);
   top: 50%;
+
+  float: left;
+
+  z-index: 2;
 
   width: 40px;
   height: 40px;
+
+  cursor: pointer;
+
   background-color: transparent;
-  float: left;
-  z-index: 2;
+
+  transform: translateY(-50%);
 }
 
 button.mobile-button span {
-  border-bottom: solid 2px palette('white');
   display: block;
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+
   padding-top: 1px;
   padding-bottom: 1px;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+
+  border-bottom: solid 2px palette('white');
 }
-
-
-
